<resources>
    <string name="app_name">BookClub</string>
    <string name="signOutBtn">Sign Out</string>
    <string name="addMembersBtn">Invite Members</string>
    <string name="createBookClubNameTextView">Book Club Name:</string>
    <string name="createBookClubUploadImageBtn">Upload Image</string>
    <string name="createBookClubNameHint">Name of book club</string>
    <string name="createBookClubInstructionsTextView">Let\'s get started! First, let\'s choose a profile picture for your club! Once that\'s done add a name to your book club and you\'re all set!</string>
    <string name="createBookClubBtn">Create New Book Club</string>
    <string name="createMeetingBtn">Create Meeting</string>
    <string name="setLocationBtn">Set Location</string>
    <string name="deleteClubBtn">Delete Club</string>
    <string name="viewMeetingsBtn">View Meetings</string>
    <string name="createMeetingTextView">Time for your next club meeting? Just fill in the information below and send an invite to everyone in your book club!</string>
    <string name="meetingLocationHint">Meeting Location</string>
    <string name="meetingDateHint">01/12/2020</string>
    <string name="locationTextView">Location:</string>
    <string name="dateTextView">Date:</string>
    <string name="startTimeTextView">Start Time:</string>
    <string name="endTimeTextView">End Time:</string>
    <string name="meetingTimeHint">11:30</string>
    <string name="viewMeetingTextView">Here are all your club meetings!</string>
    <string name="attendingTextView">Attending Members</string>
    <string name="user_profile">User Profile</string>
    <string name="userProfileTextInfo">Here you can upload your profile picture and set your display name!</string>
    <string name="userProfileName">Your name</string>
    <string name="saveUserProfile">Save user profile</string>
    <string name="chooseBookText">Choose a book</string>
    <string name="search_for_book">Search For Book</string>
    <string name="enter_search">Enter search...</string>
    <string name="search">Search</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="past_meetings">Past Meetings</string>
    <string name="location">Location:</string>
    <string name="owner">Owner:</string>
    <string name="date">Date:</string>
    <string name="club_name">Club Name:</string>
</resources>