<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateMeeting">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/createMeetingTextView"
            android:layout_width="339dp"
            android:layout_height="81dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:text="@string/createMeetingTextView"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locationTextView"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="15dp"
            android:layout_below="@id/createMeetingTextView"
            android:layout_marginTop="35dp" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateTextView"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="55dp"
            android:layout_below="@id/locationTextView"
            android:layout_marginTop="49dp" />

        <TextView
            android:id="@+id/startTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startTimeTextView"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@id/dateTextView"
            android:layout_marginTop="43dp" />

        <TextView
            android:id="@+id/endTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endTimeTextView"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_below="@id/startTimeTextView"
            android:layout_marginTop="43dp" />

        <EditText
            android:id="@+id/locationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:ems="10"
            android:hint="@string/meetingLocationHint"
            android:inputType="text"
            android:layout_marginStart="110dp"
            android:enabled="false"
            android:layout_below="@id/createMeetingTextView"
            android:layout_marginTop="25dp" />

        <EditText
            android:id="@+id/dateEditText"
            android:layout_width="match_parent"
            android:layout_marginEnd="50dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/meetingDateHint"
            android:inputType="date"
            android:layout_marginStart="110dp"
            android:layout_below="@id/locationEditText"
            android:layout_marginTop="25dp" />

        <EditText
            android:id="@+id/startTimeEditText"
            android:layout_width="match_parent"
            android:layout_marginEnd="50dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/meetingTimeHint"
            android:inputType="time"
            android:layout_marginStart="110dp"
            android:layout_below="@id/dateEditText"
            android:layout_marginTop="25dp" />

        <EditText
            android:id="@+id/endTimeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:ems="10"
            android:hint="@string/meetingTimeHint"
            android:inputType="time"
            android:layout_marginStart="110dp"
            android:layout_below="@id/startTimeEditText"
            android:layout_marginTop="25dp" />

        <Button
            android:id="@+id/getLocationBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setLocationBtn"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/endTimeEditText"
            android:layout_marginTop="50dp" />

        <Button
            android:id="@+id/addBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chooseBookText"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/getLocationBtn"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/setMeetingBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createMeetingBtn"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/addBook"
            android:layout_marginTop="100dp" />
    </RelativeLayout>
</ScrollView>