<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateBookClub">

    <EditText
        android:id="@+id/createBookClubNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/createBookClubNameHint"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/createBookClubMembersBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addMembersBtn" />

    <Button
        android:id="@+id/createBookClubBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createBookClubBtn" />

</LinearLayout>