<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent"
    tools:context=".BookClubDetails">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/clubImageView"
            android:layout_width="match_parent"
            android:layout_height="180sp"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="120dp" />

        <TextView
            android:id="@+id/clubNameTextViewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:text="@string/club_name"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/clubNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/clubNameTextViewLabel"
            android:text="TextView"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/clubAdminTextViewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/clubNameTextView"
            android:textStyle="bold"
            android:text="@string/owner"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/clubAdminTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/clubAdminTextViewLabel"
            android:text="TextView"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_below="@id/clubAdminTextView"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/inviteToBookClubBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/colorAccent"
                android:text="@string/addMembersBtn" />

            <Button
                android:id="@+id/createMeetingBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/colorAccent"
                android:text="@string/createMeetingBtn" />

            <Button
                android:id="@+id/deleteClubBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/colorAccent"
                android:text="@string/deleteClubBtn" />

            <Button
                android:id="@+id/viewMeetingsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/colorAccent"
                android:text="@string/viewMeetingsBtn" />

        </LinearLayout>

        <ListView
            android:id="@+id/membersListView"
            android:layout_width="match_parent"
            android:layout_height="309dp"
            android:layout_marginTop="420dp" />

    </RelativeLayout>
</ScrollView>