<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".AttendingActivity">

    <TextView
        android:id="@+id/meetingTextViewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/owner"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/meetingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/meetingTextViewLabel"
        android:text="Meeting owner name here"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/meetingLocationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/meetingTextView"
        android:text="@string/location"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/meetingLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/meetingLocationLabel"
        android:text="Location"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/meetingDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/meetingLocation"
        android:text="@string/date"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/meetingDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/meetingDateLabel"
        android:text="Meeting Date and time"
        android:textSize="18sp" />

    <Button
        android:id="@+id/deleteMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/meetingDate"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:text="Delete Meeting"
        android:textSize="20sp" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_below="@id/deleteMeeting"
        android:layout_marginTop="10dp"
        android:layout_height="200dp" />

    <TextView
        android:id="@+id/attendingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/attendingTextView"
        android:layout_below="@id/map"
        android:textSize="20sp" />


    <ListView
        android:id="@+id/attendingListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/attendingTextView" />

</RelativeLayout>